--- a/asyncio/intro_asyncio.ipynb
+++ b/asyncio/intro_asyncio.ipynb
@@ -4,44 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pruebas de asyncio\n",
+    "# Asyncio intro\n",
     "\n",
     "Tutorial de asyncio seguido del siguiente link: https://github.com/peterhinch/micropython-async/blob/master/TUTORIAL.md\n",
-    "Para instalar asyncio se debe correr los siguientes codigos en el micro, pero primero es necesario conectarse a internet."
+    "Para instalar asyncio se debe correr los siguientes codigos en el micro, pero primero es necesario conectarse a internet.\n",
+    "\n",
+    "Para ello nos conectamos a la placa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34mConnecting to --port=/dev/ttyUSB1 --baud=115200 \u001b[0m\n",
+      "\u001b[34mConnecting to --port=/dev/ttyUSB0 --baud=115200 \u001b[0m\n",
       "\u001b[34mReady.\n",
       "\u001b[0m"
      ]
     }
    ],
    "source": [
-    "%serialconnect --port=/dev/ttyUSB1"
+    "%serialconnect --port=/dev/ttyUSB0"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import network\n",
-    "sta_if = network.WLAN(network.STA_IF)\n",
-    "if not sta_if.isconnected():\n",
-    "    sta_if.active(True)\n",
-    "    sta_if.connect('Cc2.4', 'cortocircuito123')\n",
-    "    while not sta_if.isconnected():\n",
-    "        pass"
+    "Procedemos a conectarnos a internet para poder instalar uasyncio"
    ]
   },
   {
@@ -52,41 +46,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Installing to: /lib/\n",
-      ".Warning: micropython.org SSL certificate is not validated\n",
-      "Installing micropython-uasyncio 2.0 from https://micropython.org/pi/uasyncio/uasyncio-2.0.tar.gz\n",
-      ".Installing micropython-uasyncio.core 2.0 from https://micropython.org/pi/uasyncio.core/uasyncio.core-2.0.tar.gz\n",
-      "Installing to: /lib/\n",
-      ".Installing micropython-uasyncio.synchro 0.1.1 from https://micropython.org/pi/uasyncio.synchro/uasyncio.synchro-0.1.1.tar.gz\n",
-      ".Installing micropython-uasyncio.core 2.0 from https://micropython.org/pi/uasyncio.core/uasyncio.core-2.0.tar.gz\n",
-      "Installing to: /lib/\n",
-      "Installing micropython-uasyncio.queues 0.1.2 from https://micropython.org/pi/uasyncio.queues/uasyncio.queues-0.1.2.tar.gz\n",
-      ".Installing micropython-collections.deque 0.1.3 from https://micropython.org/pi/collections.deque/collections.deque-0.1.3.tar.gz\n",
-      ".Installing micropython-uasyncio.core 2.0 from https://micropython.org/pi/uasyncio.core/uasyncio.core-2.0.tar.gz\n",
-      "."
-     ]
-    }
-   ],
-   "source": [
-    "import upip\n",
-    "upip.install('micropython-uasyncio')\n",
-    "upip.install('micropython-uasyncio.synchro')\n",
-    "upip.install('micropython-uasyncio.queues')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El siguiente ejemplo corre indefinidamente por lo que se lo debe parar interrumpiendo el kernel."
+    "El siguiente es un ejemplo corrido con asyncio, de manera que se define una funcion que sera corrida de manera asyncronica, y la misma que hara tendra un sleep de segundo.\n",
+    "\n",
+    "Para ello se debe de notar que se usa el prefijo `asyncio def function():` en la creación de alguna función y que ademas se usa `await asyncio.sleep(1)`, estas dos maneras de definir una funcion y además hacer un sleep, es lo que permite que nuestro microcontrolador al momento de ejecutar no se quede bloqueado y que pueda seguir con otro procesos."
    ]
   },
   {
@@ -99,14 +64,25 @@
      "output_type": "stream",
      "text": [
       "1\n",
+      "1\n",
+      "2\n",
       "2\n",
       "3\n",
-      ".4\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "5\n",
       "5\n",
       "6\n",
+      "6\n",
+      "7\n",
       "7\n",
       "8\n",
+      "8\n",
       "9\n",
+      "9\n",
+      "10\n",
+      "10\n",
       "\u001b[34m\n",
       "\n",
       "*** Sending Ctrl-C\n",
@@ -119,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"<stdin>\", line 11, in <module>\n",
+      "  File \"<stdin>\", line 12, in <module>\n",
       "  File \"/lib/uasyncio/core.py\", line 173, in run_forever\n",
       "  File \"/lib/uasyncio/__init__.py\", line 69, in wait\n",
       "KeyboardInterrupt: \n"
@@ -128,9 +104,10 @@
    ],
    "source": [
     "import uasyncio as asyncio\n",
+    "\n",
     "async def bar():\n",
     "    count = 0\n",
-    "    while True:\n",
+    "    while count<=10:\n",
     "        count += 1\n",
     "        print(count)\n",
     "        await asyncio.sleep(1)  # Pause 1s\n",
@@ -144,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora con mas de una cuenta"
+    "Ahora con dos procesos distintos."
    ]
   },
   {
@@ -238,36 +215,6 @@
     "loop.create_task(foo())\n",
     "loop.run_forever()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mConnecting to --port=/dev/ttyUSB1 --baud=115200 \u001b[0m\n",
-      "MicroPython v1.11 on 2019-05-29; ESP32 module with ESP32\n",
-      "Type \"help()\" for more information.\n",
-      ">>>[reboot detected 0]repl is in normal command mode\n",
-      "[\\r\\x03\\x03] b'\\r\\n>>> '\n",
-      "[\\r\\x01] b'\\r\\n>>> \\r\\nraw REPL; CTRL-B to exit\\r\\n>' \u001b[34mReady.\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
-    "%serialconnect --port=/dev/ttyUSB1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
