--- a/uasyncio/intro_uasyncio.ipynb
+++ b/uasyncio/intro_uasyncio.ipynb
@@ -6,10 +6,7 @@
    "source": [
     "# Asyncio intro\n",
     "\n",
-    "Tutorial de asyncio seguido del siguiente link: https://github.com/peterhinch/micropython-async/blob/master/TUTORIAL.md\n",
-    "Para instalar asyncio se debe correr los siguientes codigos en el micro, pero primero es necesario conectarse a internet.\n",
-    "\n",
-    "Para ello nos conectamos a la placa"
+    "So basically asyncio is a module that allows us to complete more than one process at once, here we will see how it can be used, some of its syntaxis and what coroutines are. First we must connect via serial with the microcontroller"
    ]
   },
   {
@@ -35,20 +32,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Procedemos a conectarnos a internet para poder instalar uasyncio"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ya conectados a internet, corremos lo siguiente para instalar las librerias."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "\n",
     "El siguiente es un ejemplo corrido con asyncio, de manera que se define una funcion que sera corrida de manera asyncronica, y la misma que hara tendra un sleep de segundo.\n",
     "\n",
     "Para ello se debe de notar que se usa el prefijo `asyncio def function():` en la creación de alguna función y que ademas se usa `await asyncio.sleep(1)`, estas dos maneras de definir una funcion y además hacer un sleep, es lo que permite que nuestro microcontrolador al momento de ejecutar no se quede bloqueado y que pueda seguir con otro procesos."
