--- a/uasyncio/uasyncio_install.ipynb
+++ b/uasyncio/uasyncio_install.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Installing asyncio\n",
-    "Fortunately there is an asyncio library that has been developed to be used in MicroPython defined as `uasyncio`. There are three ways in which it can be installed, in this case it will be done by using wifi and `upip`. In order to do that, we must first connect to the esp32 via serial with the following command:"
+    "`asyncio` is a python module that allows us to do almost the same multiprocessing does, it basically allows us to do multiple actions or computing at once, fortunately there is an asyncio library that has been developed to be used in MicroPython defined as `uasyncio`. There are three ways in which it can be installed, in this case it will be done by using wifi and `upip`. In order to do that, we must first connect to the esp32 via serial with the following command:"
    ]
   },
   {
