--- a/uasyncio/coros.ipynb
+++ b/uasyncio/coros.ipynb
@@ -4,27 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Corutinas con asyncio y MicroPython\n",
+    "## Coroutines (uasyncio)\n",
     "\n",
-    "Lo visto en la introducción, es basicamente a lo que se le puede llamar una corutina, y en el segundo ejemplo se implementaron dos de estas, que tambien son llamados como coros. A coro es basically the procedure that asyncio runs, which can be more than one, it is important to have in mind that all coros are defined as functions that will be run, and they must have at least  one the folloing inside `await asyncio.sleep(1)`, even if the delay is 0. `await` can always be used to wait for any asyncio defined function to be completed before continuing."
+    "Most of what was seen in the intro, is related to what a coro is and what can be done with it, most of it was queueing them. A coroutine are the asyncio functions defined then as tasks. Meaning we have almost seen most of them. The following will be about callbacks with asyncio.\n",
+    "\n",
+    "Callback functions wouldn't have any oportunity to let external callback functions to run since it is almost like an endless loop, so for that we have the following methods:\n",
+    "* `.call_soon(func,arg1,arg2,arg3, ...)` - this one lets us run a function asap, `func` for function and `arg` for any argument needed.\n",
+    "* `.call_later(time,func,arg1,arg2,arg3, ...)` - the only difference from the last one is that it lets us define a time in seconds as a delay before running, which is `time`.\n",
+    "* `.call_later_ms(time,func,arg1,arg2,arg3, ...)` - same as last one except this time it is ms.\n",
+    "\n",
+    "Lets run an example. As always lets connect to the board first."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mConnecting to --port=/dev/ttyUSB0 --baud=115200 \u001b[0m\n",
+      "\u001b[34mReady.\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "%serialconnect --port /dev/ttyUSB0 --baudrate 115200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"<stdin>\", line 9, in <module>\n",
+      "AttributeError: 'PollEventLoop' object has no attribute 'call_soon_threadsafe'\n"
+     ]
+    }
+   ],
    "source": [
     "import uasyncio as asyncio\n",
     "\n",
-    "async def bar():\n",
-    "    count = 0\n",
-    "    while count<=10:\n",
-    "        count += 1\n",
-    "        print(count)\n",
+    "def foo(delay_secs,loop):\n",
+    "    import time\n",
+    "    time.sleep(delay_secs)\n",
+    "    print('Hello')\n",
+    "    loop.stop()\n",
     "\n",
     "loop = asyncio.get_event_loop()\n",
-    "loop.create_task(bar()) # Schedule ASAP\n",
+    "loop.call_soon(foo, 4,loop)\n",
     "loop.run_forever()"
    ]
   },
