--- a/uasyncio/coros.ipynb
+++ b/uasyncio/coros.ipynb
@@ -36,6 +36,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It should be considered that callbacks can't be defined as asyncio functions, since they would never be run. There is an example in the following cell.\n",
+    "Also it is important to note that here we are using `.stop()` and as for an example we are using `.call_soon()`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -68,7 +76,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "break prueba"
+    "Now lets run an example with `.call_later()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An example with `.call_later_ms()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uasyncio as asyncio\n",
+    "\n",
+    "def foo(delay_secs,loop):\n",
+    "    import time\n",
+    "    time.sleep(delay_secs)\n",
+    "    print('Hello')\n",
+    "    loop.stop()\n",
+    "\n",
+    "loop = asyncio.get_event_loop()\n",
+    "loop.call_later(3,foo, 4,loop)\n",
+    "loop.run_forever()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally an example with `.call_later_ms()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uasyncio as asyncio\n",
+    "\n",
+    "def foo(delay_secs,loop):\n",
+    "    import time\n",
+    "    time.sleep(delay_secs)\n",
+    "    print('Hello')\n",
+    "    loop.stop()\n",
+    "\n",
+    "loop = asyncio.get_event_loop()\n",
+    "loop.call_later_ms(500,foo, 4,loop)\n",
+    "loop.run_forever()"
    ]
   }
  ],
