--- a/uasyncio/uasyncio_install.ipynb
+++ b/uasyncio/uasyncio_install.ipynb
@@ -43,7 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "conectado a internet\n"
+      ".conectado a internet\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
     "sta_if = network.WLAN(network.STA_IF)\n",
     "if not sta_if.isconnected():\n",
     "    sta_if.active(True)\n",
-    "    sta_if.connect('FLIA SILVA', 'generacionsilva1976')\n",
+    "    sta_if.connect('SoccerRobot', 'esp12345678')\n",
     "    while not sta_if.isconnected():\n",
     "        pass\n",
     "if sta_if.isconnected():\n",
@@ -78,7 +78,7 @@
       "Installing to: /lib/\n",
       "Warning: micropython.org SSL certificate is not validated\n",
       "Installing micropython-uasyncio 2.0 from https://micropython.org/pi/uasyncio/uasyncio-2.0.tar.gz\n",
-      ".Installing micropython-uasyncio.core 2.0 from https://micropython.org/pi/uasyncio.core/uasyncio.core-2.0.tar.gz\n",
+      "..Installing micropython-uasyncio.core 2.0 from https://micropython.org/pi/uasyncio.core/uasyncio.core-2.0.tar.gz\n",
       "."
      ]
     }
@@ -108,10 +108,10 @@
       "  log -- None\n",
       "  IOWrite -- <class 'IOWrite'>\n",
       "  select -- <module 'uselect'>\n",
-      "  Task -- <function Task at 0x3fff0a50>\n",
+      "  Task -- <function Task at 0x3ffe79b0>\n",
       "  IORead -- <class 'IORead'>\n",
       "  PollEventLoop -- <class 'PollEventLoop'>\n",
-      "  ensure_future -- <function ensure_future at 0x3fff0a20>\n",
+      "  ensure_future -- <function ensure_future at 0x3ffe7980>\n",
       "  StreamReader -- <class 'StreamReader'>\n",
       "  IOReadDone -- <class 'IOReadDone'>\n",
       "  uerrno -- <module 'uerrno'>\n",
@@ -123,10 +123,10 @@
       "  StreamWriter -- <class 'StreamWriter'>\n",
       "  time -- <module 'utime'>\n",
       "  uasyncio -- <module 'uasyncio' from '/lib/uasyncio/__init__.py'>\n",
-      "  cancel -- <function cancel at 0x3fff0680>\n",
+      "  cancel -- <function cancel at 0x3ffe77c0>\n",
       "  sleep -- <generator>\n",
       "  utimeq -- <module 'utimeq'>\n",
-      "  sleep_ms -- <SleepMs object at 3fff0660>\n",
+      "  sleep_ms -- <SleepMs object at 3ffe77a0>\n",
       "  CancelledError -- <class 'CancelledError'>\n",
       "  __file__ -- /lib/uasyncio/__init__.py\n",
       "  SysCall1 -- <class 'SysCall1'>\n",
@@ -134,24 +134,133 @@
       "  TimeoutError -- <class 'TimeoutError'>\n",
       "  _socket -- <module 'usocket'>\n",
       "  SleepMs -- <class 'SleepMs'>\n",
-      "  set_debug -- <function set_debug at 0x3ffe6be0>\n",
+      "  set_debug -- <function set_debug at 0x3ffe5900>\n",
       "  SysCall -- <class 'SysCall'>\n",
-      "  coroutine -- <function coroutine at 0x3fff0700>\n",
+      "  coroutine -- <function coroutine at 0x3ffe7840>\n",
       "  DEBUG -- 0\n",
       "  __name__ -- uasyncio\n",
       "  IOWriteDone -- <class 'IOWriteDone'>\n",
       "  type_gen -- <class 'generator'>\n",
       "  core -- <module 'uasyncio.core' from '/lib/uasyncio/core.py'>\n",
       "  __path__ -- /lib/uasyncio\n",
-      "  wait_for -- <function wait_for at 0x3fff06f0>\n",
+      "  wait_for -- <function wait_for at 0x3ffe7830>\n",
       "  TimeoutObj -- <class 'TimeoutObj'>\n",
-      "  get_event_loop -- <function get_event_loop at 0x3fff0710>\n"
+      "  get_event_loop -- <function get_event_loop at 0x3ffe7850>\n"
      ]
     }
    ],
    "source": [
     "import uasyncio\n",
     "help(uasyncio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So far we have just installed uasyncio's core, if we want to use asyncio to its fullest, we should import some other modules like `micropython-asyncio.synchro` and `micropython-asyncio.queues`. To discover more of this libraries, enter [MicroPython Libraries](https://github.com/micropython/micropython-lib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installing to: /lib/\n",
+      "Installing micropython-uasyncio.synchro 0.1.1 from https://micropython.org/pi/uasyncio.synchro/uasyncio.synchro-0.1.1.tar.gz\n",
+      "..Installing micropython-uasyncio.core 2.0 from https://micropython.org/pi/uasyncio.core/uasyncio.core-2.0.tar.gz\n",
+      "."
+     ]
+    }
+   ],
+   "source": [
+    "upip.install('micropython-uasyncio.synchro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Installing to: /lib/\n",
+      ".Installing micropython-uasyncio.queues 0.1.2 from https://micropython.org/pi/uasyncio.queues/uasyncio.queues-0.1.2.tar.gz\n",
+      "..Installing micropython-collections.deque 0.1.3 from https://micropython.org/pi/collections.deque/collections.deque-0.1.3.tar.gz\n",
+      ".Installing micropython-uasyncio.core 2.0 from https://micropython.org/pi/uasyncio.core/uasyncio.core-2.0.tar.gz\n",
+      "."
+     ]
+    }
+   ],
+   "source": [
+    "upip.install('micropython-uasyncio.queues')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets see if this are ready to be used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object <module 'uasyncio.synchro' from '/lib/uasyncio/synchro.py'> is of type module\n",
+      "  core -- <module 'uasyncio.core' from '/lib/uasyncio/core.py'>\n",
+      "  Lock -- <class 'Lock'>\n",
+      "  __name__ -- uasyncio.synchro\n",
+      "  __file__ -- /lib/uasyncio/synchro.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "import uasyncio.synchro\n",
+    "help(uasyncio.synchro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object <module 'uasyncio.queues' from '/lib/uasyncio/queues.py'> is of type module\n",
+      "  QueueEmpty -- <class 'QueueEmpty'>\n",
+      "  sleep -- <generator>\n",
+      "  __name__ -- uasyncio.queues\n",
+      "  __file__ -- /lib/uasyncio/queues.py\n",
+      "  deque -- <class 'deque'>\n",
+      "  Queue -- <class 'Queue'>\n",
+      "  QueueFull -- <class 'QueueFull'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import uasyncio.queues\n",
+    "help(uasyncio.queues)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The ones installed before are needed in order to use the `Queue` and `Lock` object, examples you can find in synchronization notebook. There are some more like Semaphore and Event which are in anther script named `asyn.py`provided by Peter Hinch, it can be installed using `ampy`, done in [Install asyn.py](install_asyn.ipynb)"
    ]
   },
   {
